--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,2 @@
 spring.application.name=game
-spring.data.mongodb.uri=mongodb+srv://rohithmh017_db_user:12345678@cluster0.j6gs9jm.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-spring.data.mongodb.database=game
+spring.data.mongodb.uri=mongodb+srv://rohithmh017_db_user:rohith12345@cluster0.j6gs9jm.mongodb.net/game?retryWrites=true&w=majority&appName=Cluster0
